# cpp-presentation

./: .gitignore  README.md  abstract.md  args.html  class.md  class1.md  cpp_the_good_the_bad_the_ugly.html  cpp_the_good_the_bad_the_ugly.md  function1.html  function1.md  function_arguments.html  index.html  initialization_of_cpp_is_bonkers.html  initialization_of_cpp_is_bonkers.md  memory_management.md  package-lock.json  return.md  tack-clash-prot
cpp/: .gitignore  common.hpp  example_compiler_more_opti.md  inf_loop_gcc.cpp  madness_of_init.cpp  no_ret.cpp  out-of-bounds.cpp  params.cpp  thread_lock.cpp  val.cpp
cpp/git/: README.md
cpp/icomp/: .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  Makefile  benchmark_icomp.cpp  icomp.hpp  main.cpp  test_icomp  test_icomp.cpp  vcpkg.json
cpp/mm/: handler.cpp  mm00.cpp  mm01.cpp  mm02.cpp  mm03.cpp  mm04.cpp  om.cpp
cpp/return/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
cpp/return/src/: 000.cpp  002.cpp  CMakeLists.txt  errno.cpp  exception.cpp  expected.cpp  optional.cpp  outcome.cpp  rvo.cpp
cpp/return/tests/: CMakeLists.txt  tests.cpp
cpp/singleton/: .clang-tidy  CMakeLists.txt  foo.hpp  logger.cpp  logger.hpp  test_foo.cpp
cpp/singleton/inheritance/: CMakeLists.txt  foo.hpp  logger.cpp  logger.hpp  tests.cpp
cpp/singleton/template/: .clang-tidy  CMakeLists.txt  foo.hpp  logger.hpp  tests.cpp
materials/: function.md  noexcept.md
